--- a/_config.yml
+++ b/_config.yml
@@ -43,20 +43,21 @@ html:
   navbar_number_sections    : True  # Add a number to each section in your left navbar
   google_analytics_id       : "UA-148221575-1"  # A GA id that can be used to track book views.
   home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
-  # baseurl                   : "https://inferentialthinking.org"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
-  # use_repository_button     : true
-  # use_edit_page_button      : false
-  # use_issues_button         : false
+  extra_footer : |
+      <div>
+      Esta obra está bajo una <a href="https://creativecommons.org/licenses/by/4.0/deed.es"> Licencia Creative Commons Atribución 4.0 Internacional </a>
+      <a href="https://creativecommons.org/publicdomain/zero/1.0/deed.es_ES"><img src="https://i.creativecommons.org/l/by/4.0/88x31.png"></a>
+      </div>
 
 #######################################################################################
 # Launch button settings
-# launch_buttons:
-#   jupyterhub_url            : https://datahub.berkeley.edu
-#   binderhub_url             : https://mybinder.org  # The URL of the BinderHub (e.g., https://mybinder.org)
-
-# repository:
-#   url                       : https://github.com/data-8/textbook  # The URL to your book's repository
-#   branch                    : main  # Which branch of the repository should be used when creating links
+launch_buttons:
+  binderhub_url             : "https://mybinder.org"  # The URL of the BinderHub (e.g., https://mybinder.org)
+  notebook_interface        : "jupyterlab"
+  
+repository:
+   url                       : https://github.com/LuisHervella/JB_Calculo1_UDC  # The URL to your book's repository
+   branch                    : main  # Which branch of the repository should be used when creating links
 
 # sphinx:
 #   config:
