--- a/_toc.yml
+++ b/_toc.yml
@@ -89,9 +89,13 @@ chapters:
     - file: capitulos/05/06.Integracion
       title: Integración en Python
 
-# - file: capitulos/06/problemas_modelo
-#   title: Algunos problemas modelo
-#   sections:
+- file: capitulos/06/README
+  title: Ejercicios y exámenes
+  sections:
+    - file: capitulos/06/enero_22
+      title: Examen Enero 2022
+    - file: capitulos/06/julio_22
+      title: Examen Julio 2022
 #    - file: capitulos/06/1_elevado_a_infinito
 #      title: Ejercicio tipo para una indeterminación de la forma 1 elevado a infinito
 #    - file: capitulos/06/Minimizar_coste_caja
