Cambios del 13 de enero

--- a/_toc.yml
+++ b/_toc.yml
@@ -96,6 +96,8 @@ chapters:
       title: Examen Enero 2022
     - file: capitulos/06/julio_22
       title: Examen Julio 2022
+    - file: capitulos/06/enero_23
+      title: Examen Enero 2023
 #    - file: capitulos/06/1_elevado_a_infinito
 #      title: Ejercicio tipo para una indeterminación de la forma 1 elevado a infinito
 #    - file: capitulos/06/Minimizar_coste_caja
