--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ launch_buttons:
   notebook_interface        : "jupyterlab"
   
 repository:
-   url                       : https://github.com/LuisHervella/JB_Calculo1_UDC  # The URL to your book's repository
+   url                       : https://gei-cal.github.io/JB-Calculo1-UDC  # The URL to your book's repository
    branch                    : main  # Which branch of the repository should be used when creating links
 
 # sphinx:
